resolved issues regarding h1 header contrast, added in text to specify toronto-based app, minor styling changes for landing page

--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -20,6 +20,10 @@ h1 {
     font-size: clamp(3rem, 10vw, 8rem);
 }
 
+.dark h1 {
+    color: $white;
+}
+
 h2 {
     font-size: clamp(1rem, 5vw, 3.5rem);
 }
@@ -48,7 +52,8 @@ a:focus {
 }
 
 .arrowDownButton {
-    font-size: clamp(1rem, 6vw, 3rem);
+    // font-size: clamp(1rem, 6vw, 3rem);
+    font-size: 3rem;
 }
 
 footer p,
